# cpu_usage_tracker

./: CMakeLists.txt  README.md  shell_build.sh
.github/workflows/: pipelines.yml
apps/: CMakeLists.txt  main.c
include/threads/: reader.h
src/: CMakeLists.txt
src/threads/: reader.c
tests/: CMakeLists.txt  testlib.c
